@@ -1,17 +1,22 @@
 package net.bitbylogic.apibylogic.menu.task;
 
-import lombok.Getter;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import net.bitbylogic.apibylogic.APIByLogic;
 import net.bitbylogic.apibylogic.menu.Menu;
-import net.bitbylogic.apibylogic.menu.MenuItem;
+import net.bitbylogic.apibylogic.menu.MenuData;
+import net.bitbylogic.apibylogic.menu.item.MenuItem;
 import net.bitbylogic.apibylogic.menu.inventory.MenuInventory;
+import net.bitbylogic.apibylogic.util.StringModifier;
 import net.bitbylogic.apibylogic.util.inventory.InventoryUtil;
+import net.bitbylogic.apibylogic.util.item.ItemStackUtil;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
 
+import java.util.ArrayList;
+import java.util.Iterator;
 import java.util.List;
 
 @RequiredArgsConstructor
@@ -19,40 +24,55 @@ public class MenuUpdateTask {
 
     private final Menu menu;
 
-    private int taskId;
-
-    @Getter
-    private boolean active;
+    private int taskId = -1;
 
     public void startTask() {
-        if (active) {
+        if (taskId != -1) {
             return;
         }
 
-        active = true;
         taskId = Bukkit.getScheduler().runTaskTimer(APIByLogic.getInstance(), this::pushUpdates, 0, 5).getTaskId();
     }
 
     public void cancelTask() {
-        if (!active) {
+        if (taskId == -1) {
             return;
         }
 
         Bukkit.getScheduler().cancelTask(taskId);
-        active = false;
+        taskId = -1;
     }
 
     private void pushUpdates() {
         if (menu.getData().getMaxInventories() != -1 && !menu.getInventories().isEmpty()) {
-            Inventory finalInventory = menu.getInventories().get(menu.getInventories().size() - 1).getInventory();
+            Inventory finalInventory = menu.getInventories().getLast().getInventory();
 
             if (!InventoryUtil.hasSpace(finalInventory, null, menu.getData().getValidSlots())) {
                 menu.generateNewInventory().ifPresent(menu.getInventories()::add);
             }
         }
 
-        for (MenuItem menuItem : menu.getItems()) {
-            if (menuItem.getSourceInventories().isEmpty()) {
+        Iterator<MenuItem> storedItemIterator = menu.getData().getItemStorage().iterator();
+
+        while(storedItemIterator.hasNext()) {
+            MenuItem storedItem = storedItemIterator.next();
+
+            if(storedItem.getSourceInventories().isEmpty() || storedItem.getSlots().isEmpty()) {
+               continue;
+            }
+
+            menu.addItem(storedItem);
+            storedItemIterator.remove();
+        }
+
+        Iterator<MenuItem> itemIterator = menu.getItems().iterator();
+
+        while(itemIterator.hasNext()) {
+            MenuItem menuItem = itemIterator.next();
+
+            if (menuItem.getSourceInventories().isEmpty() || menuItem.getSlots().isEmpty()) {
+                menu.getData().getItemStorage().add(menuItem);
+                itemIterator.remove();
                 continue;
             }
 
@@ -64,22 +84,20 @@ public class MenuUpdateTask {
 
                 List<Integer> slots = menuItem.getSlots();
 
-                if (menuItem.getItem() == null) {
+                if (menuItem.getItem() == null && menuItem.getItemUpdateProvider() == null) {
                     slots.forEach(slot -> inventory.setItem(slot, null));
                     return;
                 }
 
                 ItemStack item = menuItem.getItem().clone();
-                menu.updateItemMeta(item);
+                updateItemMeta(menu, item);
 
                 slots.forEach(slot -> {
-                    if (inventory.getItem(slot) == null) {
-                        inventory.setItem(slot, item);
+                    if (inventory.getItem(slot) != null && inventory.getItem(slot).getType() == item.getType()) {
+                        return;
                     }
 
-                    if (inventory.getItem(slot).getType() != item.getType()) {
-                        inventory.setItem(slot, item);
-                    }
+                    inventory.setItem(slot, item);
                 });
 
                 if (!menuItem.isUpdatable()) {
@@ -87,7 +105,7 @@ public class MenuUpdateTask {
                 }
 
                 ItemStack updatedItem = menuItem.getItemUpdateProvider() == null ? menuItem.getItem().clone() : menuItem.getItemUpdateProvider().requestItem(menuItem);
-                menu.updateItemMeta(updatedItem);
+                updateItemMeta(menu, updatedItem);
 
                 slots.forEach(slot -> inventory.setItem(slot, updatedItem));
             });
@@ -96,8 +114,10 @@ public class MenuUpdateTask {
         for (MenuInventory menuInventory : menu.getInventories()) {
             Inventory inventory = menuInventory.getInventory();
 
-            if (menu.getData().getFillerItem() != null && menu.getData().getFillerItem().getItem().getType() != Material.AIR) {
-                MenuItem fillerItem = menu.getData().getFillerItem();
+            menu.getData().getFillerItem().ifPresent(fillerItem -> {
+                if(fillerItem.getItem() == null || fillerItem.getItem().getType().isAir()) {
+                    return;
+                }
 
                 for (int i = 0; i < inventory.getSize(); i++) {
                     if (inventory.getItem(i) != null || menu.getData().getValidSlots().contains(i)) {
@@ -106,8 +126,25 @@ public class MenuUpdateTask {
 
                     inventory.setItem(i, fillerItem.getItem());
                 }
-            }
+            });
         }
+    }
+
+    private void updateItemMeta(@NonNull Menu menu, @NonNull ItemStack item) {
+        final MenuData data = menu.getData();
+
+        if (data.getModifiers().isEmpty() && data.getPlaceholderProviders().isEmpty()) {
+            return;
+        }
+
+        List<StringModifier> placeholders = new ArrayList<>(data.getModifiers());
+        data.getPlaceholderProviders().forEach(placeholder -> placeholders.add(placeholder.asPlaceholder()));
+
+        ItemStackUtil.updateItem(item, placeholders.toArray(new StringModifier[]{}));
+    }
+
+    public boolean isActive() {
+        return taskId != -1;
     }
 
 }
